@@ -3,6 +3,16 @@ Release Notes
 Date:   10/09/2025
 Name:   Kenneth Ng
 Release:
+1. Tidying of codes in Main and Calendar View Scripts
+
+Changes:
+calendar_view.py
+main.py
+
+=============
+Date:   10/09/2025
+Name:   Kenneth Ng
+Release:
 1. Adjusted window size for more buttons
 2. Added feature in calendar view to load from TIMETABLE_DATETIME table and display calendar based on calendar data
 
